--- a/movies/.gitlab-ci.yml
+++ b/movies/.gitlab-ci.yml
@@ -18,5 +18,6 @@ bundle_app:
   stage: build
   script:
     - npm run build
-  
-local: '/movies/.gitlab-ci.yml'
+
+include: 
+    - local: '/movies/.gitlab-ci.yml'
