CI - Basic pipeline.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ install_dependencies:
     - npm ci
   artifacts:
     paths:
-      - node_modules/
+      - movies/node_modules/
 
 bundle_app:
   stage: build
