CI - Add caching.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,13 +4,27 @@ image: node:latest
 stages:
   - install
   - build
+  - test
+variables:
+   npm_config_cache: "$CI_PROJECT_DIR/.npm"
+   CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+
+cache:
+   key:
+     files:
+        - package.json
+   paths:
+      - .npm
+      - cache/Cypress
+      - node_modules
 
 # Jobs 
 install_dependencies:
   stage: install
   script:
     - cd movies
-    - npm ci
+    - npm ci --cache .npm --prefer-offline
+    
   artifacts:
     paths:
       - movies/node_modules/
