CI - added fake job X.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,3 +35,24 @@ bundle_app:
     - cd movies
     - npm run build
    
+e2etest:
+# Node docker image with Cypress and Chrome pre-installed
+image: cypress/browsers:node12.14.1-chrome85-ff81
+stage: test
+script:
+  - echo "Run tests in headless mode"
+  - npm run start:ci
+bundle_app:
+  stage: build
+  script:
+    - npm run build
+  artifacts:
+    paths:
+      - build/
+  
+build_jobX:
+  stage: build
+  only:
+    - develop
+  script:
+    - echo "build job X on demoBranch works"
