CI - added fake job X.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,17 +6,17 @@ stages:
   - build
   - test
 variables:
-   npm_config_cache: "$CI_PROJECT_DIR/.npm"
-   CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/Cypress"
+   npm_config_cache: "$CI_PROJECT_DIR/movies/.npm"
+   CYPRESS_CACHE_FOLDER: "$CI_PROJECT_DIR/cache/movies/Cypress"
 
 cache:
    key:
      files:
-        - package.json
+        - movies/package.json
    paths:
-      - .npm
-      - cache/Cypress
-      - node_modules
+      - movies/.npm
+      - movies/cache/Cypress
+      - movies/node_modules
 
 # Jobs 
 install_dependencies:
