--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,22 +39,22 @@ bundle_app:
     paths:
       - movies/build/
    
-e2etest:
+#e2etest:
 # Node docker image with Cypress and Chrome pre-installed
-  image: cypress/browsers:node12.14.1-chrome85-ff81
-  stage: test
-  script:
-    - cd movies
-    - echo "Run tests in headless mode"
-    - npm run start:ci
+ # image: cypress/browsers:node12.14.1-chrome85-ff81
+  #stage: test
+  #script:
+  #  - cd movies
+  #  - echo "Run tests in headless mode"
+  #  - npm run start:ci
 
-build_jobX:
-  stage: build
-  only:
-    - develop
-  script:
-    - cd movies
-    - echo "build job X on demoBranch works"
+#build_jobX:
+#  stage: build
+#  only:
+#    - develop
+#  script:
+#    - cd movies
+#    - echo "build job X on demoBranch works"
 
 test_jobX:
   stage: test
