CI - added another fake job X.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,13 +48,13 @@ bundle_app:
   #  - echo "Run tests in headless mode"
   #  - npm run start:ci
 
-#build_jobX:
-#  stage: build
-#  only:
-#    - develop
-#  script:
-#    - cd movies
-#    - echo "build job X on demoBranch works"
+build_jobX:
+  stage: build
+  only:
+    - develop
+  script:
+    - cd movies
+    - echo "build job X on demoBranch works"
 
 test_jobX:
   stage: test
